@@ -5574,14 +5574,50 @@ block|}
 else|else
 block|{
 comment|// Append just this entry
-name|String
-name|classPathEntryUrl
+name|File
+name|fileCpEntry
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+operator|!
+operator|new
+name|Path
+argument_list|(
+name|classPathEntry
+argument_list|)
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+name|fileCpEntry
+operator|=
+operator|new
+name|File
+argument_list|(
+name|workingDir
+argument_list|,
+name|classPathEntry
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|fileCpEntry
+operator|=
 operator|new
 name|File
 argument_list|(
 name|classPathEntry
 argument_list|)
+expr_stmt|;
+block|}
+name|String
+name|classPathEntryUrl
+init|=
+name|fileCpEntry
 operator|.
 name|toURI
 argument_list|()
