@@ -4133,7 +4133,48 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-elseif|else
+else|else
+block|{
+name|File
+name|fileCp
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+operator|!
+operator|new
+name|Path
+argument_list|(
+name|classPath
+argument_list|)
+operator|.
+name|isAbsolute
+argument_list|()
+condition|)
+block|{
+name|fileCp
+operator|=
+operator|new
+name|File
+argument_list|(
+name|tmp
+argument_list|,
+name|classPath
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|fileCp
+operator|=
+operator|new
+name|File
+argument_list|(
+name|classPath
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|nonExistentSubdir
@@ -4150,11 +4191,7 @@ name|expectedClassPaths
 operator|.
 name|add
 argument_list|(
-operator|new
-name|File
-argument_list|(
-name|classPath
-argument_list|)
+name|fileCp
 operator|.
 name|toURI
 argument_list|()
@@ -4177,11 +4214,7 @@ name|expectedClassPaths
 operator|.
 name|add
 argument_list|(
-operator|new
-name|File
-argument_list|(
-name|classPath
-argument_list|)
+name|fileCp
 operator|.
 name|toURI
 argument_list|()
@@ -4193,6 +4226,7 @@ name|toExternalForm
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 name|List
